All authorization checks now use a snapshot based index description including virtual tables.  So an expection is thrown if a snapshot cannot be found.  Also redacted more data from unavaiable exceptions.